# transl8

./: Cargo.toml  README.md  install_local
bio/: Cargo.toml
bio/src/: dna.rs  lib.rs  seq.rs
bio/src/seq/: embl.rs  fasta.rs  feature_table.rs  gff3.rs  mod.rs  parser.rs
chunk1t/: Cargo.toml
chunk1t/src/: main.rs
chunks/: Cargo.toml
chunks/src/: lib.rs
embl2fasta/: Cargo.toml
embl2fasta/src/: main.rs
l1st/: Cargo.toml
l1st/src/: main.rs
s3iv/: Cargo.toml
s3iv/src/: main.rs
seiv3/: Cargo.toml
seiv3/src/: main.rs
src/: dna.rs  main.rs  seq.rs
tr1m/: Cargo.toml
tr1m/src/: main.rs
transl8/: Cargo.toml
transl8/src/: main.rs
