[package]
name = "l1st"
version = "0.1.0"
authors = ["Matthew Pocock <turingatemyhamster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
bio = { path = "../bio" }
chunks = { path = "../chunks" }